update app lib 依赖版本，使用simdjson代替fastjson2